test/custom_configs/bad/000-UnknownLcd.h
#define LCD_VERSION LCD_VERSION_UNKNOWN
